[package]
name = "tls-proxy"
version = "0.1.0"
edition = "2021"

[features]
default = ["logging"]
logging = ["log"]
dangerous_configuration = ["rustls/dangerous_configuration"]
quic = ["rustls/quic"]

[dependencies]
log = { version = "0.4.4", optional = true }
rustls = "0.20.6"
rustls-pemfile = "1.0.0"
sct = "0.7"
ct-logs = "0.9"
docopt = "~1.1"
env_logger = "0.9.0"
mio = { version = "0.8", features = ["net", "os-poll"] }
regex = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8.24"
webpki-roots = "0.22"
ring = "0.16.20"
fast-socks5 = "0.8.0"
tokio = { version = "1.17.0", features = ["io-util", "net", "time", "rt-multi-thread", "macros"] }
tokio-stream = "0.1.8"
tokio-test = "0.4.2"
structopt = "0.3"

[patch.crates-io]
fast-socks5 = { path = "../fast-socks5" }